--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <h3 style="color: #fff">Organized By<br>G H Raisoni College of Engineering, Nagpur, INDIA-440016</h3><br/>
 
 <!--<img  src="img/scopus.png" class="img-fluid" alt="" height="150" width="150" style="border-radius: 20%" style="margin-left:1000px "> -->              
- <p>
+ <p class="descr">
 (An Autonomous College affiliated to RTM Nagpur University)
  (67th rank NIRF 2017 and ranked in the band of 101-150 NIRF 2018,accredited by National Assessment & Accreditation Council (NAAC) with “A+” Grade) and<br>GHR Labs & Research Centre, India
 </p>
