--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@
 (An Autonomous College affiliated to RTM Nagpur University)
  (67th rank NIRF 2017 and ranked in the band of 101-150 NIRF 2018,accredited by National Assessment & Accreditation Council (NAAC) with “A+” Grade) and<br>GHR Labs & Research Centre, India
 </p>
-<img  src="img/esci_logo.png" class="img-fluid" alt="" height="90" width="150" style="margin-left:100px ">
-               <img  src="img/scopus.png" class="img-fluid" alt="" height="150" width="150" style="border-radius: 20%" style="margin-left:25px ">
+<div class="row">
+		
+<img  src="img/esci_logo.png" class="img-fluid col-sm-6" alt="" height="90" width="150" style="margin-left:100px ">
+               <img  src="img/scopus.png" class="img-fluid col-sm-6" alt="" height="150" width="150" style="border-radius: 20%" style="margin-left:25px ">
               
 		  <a href="https://easychair.org/conferences/?conf=icamee19" target="_blank" class="btn-get-started scrollto" style="margin-left: 100px;">Paper Submission</a>
                  <a href="downloads/CFP-ICAMEE-19 23 Feb.pdf" download="CFP-ICAMEE-19 23 Feb.pdf" class="btn-get-started scrollto">Download Brochure</a>
