--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <img  src="img/esci_logo.png" class="img-fluid" alt="" height="45" width="75" style="margin-left:50px "></div>
 													 
 <div class="col-md-3">
-               <img  src="img/scopus.png" class="img-fluid col-sm-6" alt="" height="45" width="45" style="border-radius: 20%" style="margin-left:10px ">
+               <img  src="img/scopus.png" class="img-fluid" alt="" height="45" width="45" style="border-radius: 20%" style="margin-left:10px ">
               </div>
 		  <a href="https://easychair.org/conferences/?conf=icamee19" target="_blank" class="btn-get-started scrollto" style="margin-left: 100px;">Paper Submission</a>
                  <a href="downloads/CFP-ICAMEE-19 23 Feb.pdf" download="CFP-ICAMEE-19 23 Feb.pdf" class="btn-get-started scrollto">Download Brochure</a>
