--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
  (67th rank NIRF 2017 and ranked in the band of 101-150 NIRF 2018,accredited by National Assessment & Accreditation Council (NAAC) with “A+” Grade) and<br>GHR Labs & Research Centre, India
 </p>
 <div class="row">
-<div class="col-md-3 dis">
+<div class="dis">
 <img  src="img/esci_logo.png" class="img-fluid" alt="" height="45" width="75" style="margin-left:50px ">
 <img  src="img/scopus.png" class="img-fluid" alt="" height="75" width="75" style="border-radius: 20%" style="margin-left:10px ">
 </div>				 
   </div>
-               <img  src="img/scopus.png" class="img-fluid hello" alt="" height="150" width="150" style="border-radius: 20%" style="margin-left:331px; margin-bottom:-91px">
+               <img  src="img/scopus.png" class="img-fluid hello" alt="" height="150" width="150" style="border-radius: 20%" style="margin-left:25px">
               
 		  <a href="https://easychair.org/conferences/?conf=icamee19" target="_blank" class="btn-get-started scrollto" style="margin-left: 100px;">Paper Submission</a>
                  <a href="downloads/CFP-ICAMEE-19 23 Feb.pdf" download="CFP-ICAMEE-19 23 Feb.pdf" class="btn-get-started scrollto">Download Brochure</a>
